--- a/pom.xml
+++ b/pom.xml
@@ -1,41 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Licensed to the Apache Software Foundation (ASF) under one
-  ~ or more contributor license agreements. See the NOTICE file
-  ~ distributed with this work for additional information
-  ~ regarding copyright ownership. The ASF licenses this file
-  ~ to you under the Apache License, Version 2.0 (the
-  ~ "License"); you may not use this file except in compliance
-  ~ with the License. You may obtain a copy of the License at
-  ~
-  ~ http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing,
-  ~ software distributed under the License is distributed on an
-  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  ~ KIND, either express or implied. See the License for the
-  ~ specific language governing permissions and limitations
-  ~ under the License.
-  -->
+  Licensed to the Apache Software Foundation (ASF) under one
+  or more contributor license agreements. See the NOTICE file
+  distributed with this work for additional information
+  regarding copyright ownership. The ASF licenses this file
+  to you under the Apache License, Version 2.0 (the
+  "License"); you may not use this file except in compliance
+  with the License. You may obtain a copy of the License at
+
+  http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing,
+  software distributed under the License is distributed on an
+  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  KIND, either express or implied. See the License for the
+  specific language governing permissions and limitations
+  under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.swssf</groupId>
-    <artifactId>swssf</artifactId>
-    <version>1.0.0</version>
+    <groupId>org.apache.ws.security</groupId>
+    <artifactId>wss4j</artifactId>
+    <version>2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Streaming-WebService-Security-Framework</name>
-    <developers>
-        <developer>
-            <name>Marc Giger</name>
-            <email>gigerstyle@gmx.ch</email>
-        </developer>
-    </developers>
+    <name>WSS4J</name>
+    <description>
+        The Apache WSS4J project provides a Java implementation of the primary security standards 
+        for Web Services, namely the OASIS Web Services Security (WS-Security) specifications 
+        from the OASIS Web Services Security TC.
+    </description>
+    <url>http://ws.apache.org/wss4j/</url>
+    <issueManagement>
+        <system>JIRA</system>
+        <url>http://issues.apache.org/jira/browse/WSS</url>
+    </issueManagement>
+    <mailingLists>
+        <mailingList>
+            <name>Apache Web Services Developer List</name>
+            <subscribe>dev-subscribe@ws.apache.org</subscribe>
+            <unsubscribe>
+                dev-unsubscribe@ws.apache.org
+            </unsubscribe>
+            <post>dev@ws.apache.org</post>
+            <archive>
+                http://mail-archives.apache.org/mod_mbox/ws-dev/
+            </archive>
+        </mailingList>
+        <mailingList>
+            <name>Apache Web Services Users List</name>
+            <subscribe>users-subscribe@ws.apache.org</subscribe>
+            <unsubscribe>
+                users-unsubscribe@ws.apache.org
+            </unsubscribe>
+            <post>users@ws.apache.org</post>
+            <archive>
+                http://mail-archives.apache.org/mod_mbox/ws-users/
+            </archive>
+        </mailingList>
+    </mailingLists>
+    <inceptionYear>2004</inceptionYear>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <connection>
+            scm:svn:http://svn.apache.org/repos/asf/webservices/wss4j/trunk/
+        </connection>
+        <developerConnection>
+            scm:svn:https://svn.apache.org/repos/asf/webservices/wss4j/trunk/
+        </developerConnection>
+        <url>http://svn.apache.org/viewvc/webservices/wss4j/trunk</url>
+    </scm>
+    <organization>
+        <name>The Apache Software Foundation</name>
+        <url>http://www.apache.org/</url>
+    </organization>
 
     <modules>
         <module>bindings</module>
+        <module>wss4j-dom</module>
         <module>streaming-ws-security</module>
         <module>rampart-policy</module>
         <module>streaming-ws-policy</module>
@@ -51,10 +101,16 @@
         <neethi.version>3.0.2</neethi.version>
         <slf4j.version>1.6.1</slf4j.version>
         <woodstox.core.asl.version>4.1.3</woodstox.core.asl.version>
-        <wss4j.version>1.6.6</wss4j.version>
         <xalan.version>2.7.1</xalan.version>
         <xerces.version>2.9.1</xerces.version>
         <xmlsec.version>2.0.0-SNAPSHOT</xmlsec.version>
+        <opensaml.version>2.5.1-1</opensaml.version>
+        <jcs.version>1.3</jcs.version>
+        <testng.version>6.5.2</testng.version>
+        <junit.version>4.8.2</junit.version>
+        <xml.apis.version>1.3.04</xml.apis.version>
+        <commons.logging.version>1.1.1</commons.logging.version>
+        <wsdl4j.version>1.6.2</wsdl4j.version>
     </properties>
 
     <dependencyManagement>
@@ -70,11 +126,6 @@
                 <version>${xmlsec.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.ws.security</groupId>
-                <artifactId>wss4j</artifactId>
-                <version>${wss4j.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.apache.neethi</groupId>
                 <artifactId>neethi</artifactId>
                 <version>${neethi.version}</version>
@@ -84,6 +135,61 @@
                 <artifactId>woodstox-core-asl</artifactId>
                 <version>${woodstox.core.asl.version}</version>
             </dependency>
+            <dependency>
+                <groupId>jcs</groupId>
+                <artifactId>jcs</artifactId>
+                <version>${jcs.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <artifactId>opensaml</artifactId>
+                <version>${opensaml.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>${testng.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>xalan</groupId>
+                <artifactId>xalan</artifactId>
+                <version>${xalan.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>xalan</groupId>
+                <artifactId>serializer</artifactId>
+                <version>${xalan.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>xml-apis</groupId>
+                <artifactId>xml-apis</artifactId>
+                <version>${xml.apis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>${commons.logging.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>wsdl4j</groupId>
+                <artifactId>wsdl4j</artifactId>
+                <version>${wsdl4j.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -92,7 +198,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.4</version>
+                <version>2.5</version>
                 <configuration>
                     <source>${targetJdk}</source>
                     <target>${targetJdk}</target>
@@ -122,10 +228,15 @@
                         <exclude>.pmd/**</exclude>
                         <exclude>.externalToolBuilders/**</exclude>
                         <exclude>.checkstyle/**</exclude>
+                        <exclude>.classpath</exclude>
+                        <exclude>.project</exclude>
+                        <exclude>.settings/**</exclude>
                         <exclude>.idea/**</exclude>
-                        <exclude>src/main/resources/**</exclude>
-                        <exclude>src/test/resources/**</exclude>
+                        <exclude>**/src/main/resources/**</exclude>
+                        <exclude>**/src/site/**</exclude>
+                        <exclude>**/src/test/resources/**</exclude>
                         <exclude>**/*.patch</exclude>
+                        <exclude>NOTICE</exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -152,7 +263,53 @@
                 <version>2.9</version>
                 <inherited>true</inherited>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+            </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <dependencies>
+                        <dependency>
+                            <groupId>ant</groupId>
+                            <artifactId>ant-optional</artifactId>
+                            <version>1.5.3-1</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
     <profiles>
         <profile>
@@ -182,6 +339,19 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <id>fastinstall</id>
+            <properties>
+                <maven.test.skip>true</maven.test.skip>
+                <pmd.skip>true</pmd.skip>
+            </properties>
+        </profile>
+        <profile>
+            <id>nochecks</id>
+            <properties>
+                <pmd.skip>true</pmd.skip>
+            </properties>
+        </profile>
     </profiles>
     <reporting>
         <plugins>
@@ -196,9 +366,13 @@
                 <version>2.5</version>
                 <configuration>
                     <sourceEncoding>utf-8</sourceEncoding>
+                    <failOnViolation>true</failOnViolation>
                     <linkXRef>true</linkXRef>
                     <minimumTokens>100</minimumTokens>
                     <targetJdk>${targetJdk}</targetJdk>
+                    <excludes>
+                        <exclude>**/CryptoBase.java, **/DOM2Writer.java</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
@@ -213,4 +387,5 @@
             <url>http://repository.apache.org/snapshots</url>
         </repository>
     </repositories>
+
 </project>
