--- a/wss4j-dom/pom.xml
+++ b/wss4j-dom/pom.xml
@@ -20,67 +20,18 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.ws.security</groupId>
-    <artifactId>wss4j</artifactId>
-    <packaging>bundle</packaging>
-    <name>WSS4J</name>
-    <version>1.6.8-SNAPSHOT</version>
-    <description>
-        The Apache WSS4J project provides a Java implementation of the primary security standards 
-        for Web Services, namely the OASIS Web Services Security (WS-Security) specifications 
-        from the OASIS Web Services Security TC.
-    </description>
-    <url>http://ws.apache.org/wss4j/</url>
-    <issueManagement>
-        <system>JIRA</system>
-        <url>http://issues.apache.org/jira/browse/WSS</url>
-    </issueManagement>
-    <mailingLists>
-        <mailingList>
-            <name>Apache Web Services Developer List</name>
-            <subscribe>dev-subscribe@ws.apache.org</subscribe>
-            <unsubscribe>
-                dev-unsubscribe@ws.apache.org
-            </unsubscribe>
-            <post>dev@ws.apache.org</post>
-            <archive>
-                http://mail-archives.apache.org/mod_mbox/ws-dev/
-            </archive>
-        </mailingList>
-        <mailingList>
-            <name>Apache Web Services Users List</name>
-            <subscribe>users-subscribe@ws.apache.org</subscribe>
-            <unsubscribe>
-                users-unsubscribe@ws.apache.org
-            </unsubscribe>
-            <post>users@ws.apache.org</post>
-            <archive>
-                http://mail-archives.apache.org/mod_mbox/ws-users/
-            </archive>
-        </mailingList>
-    </mailingLists>
-    <inceptionYear>2004</inceptionYear>
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-    <scm>
-        <connection>
-            scm:svn:http://svn.apache.org/repos/asf/webservices/wss4j/trunk/
-        </connection>
-        <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/webservices/wss4j/trunk/
-        </developerConnection>
-        <url>http://svn.apache.org/viewvc/webservices/wss4j/trunk</url>
-    </scm>
-    <organization>
-        <name>The Apache Software Foundation</name>
-        <url>http://www.apache.org/</url>
-    </organization>
 
+    <parent>
+        <groupId>org.apache.ws.security</groupId>
+        <artifactId>wss4j</artifactId>
+        <version>2.0-SNAPSHOT</version>
+    </parent>
+    <groupId>org.apache.ws.security</groupId>
+    <artifactId>wss4j-dom</artifactId>
+    <packaging>bundle</packaging>
+    <name>WSS4J DOM Implementation</name>
+    <version>2.0-SNAPSHOT</version>
+    
     <build>
         <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
         <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
@@ -114,29 +65,6 @@
         </testResources>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <linkXRef>false</linkXRef>
-                    <failOnViolation>true</failOnViolation>
-                    <verbose>true</verbose>
-                    <targetJdk>1.5</targetJdk>
-                    <excludes>
-                        <exclude>**/CryptoBase.java, **/DOM2Writer.java</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>validate</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -172,214 +100,23 @@
                     </instructions>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-remote-resources-plugin</artifactId>
-                <version>1.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>process</goal>
-                        </goals>
-                        <configuration>
-                            <resourceBundles>
-                                <resourceBundle>org.apache:apache-jar-resource-bundle:1.4</resourceBundle>
-                            </resourceBundles>
-                            <properties>
-                                <projectName>Apache WebServices - WSS4J</projectName>
-                            </properties>
-                            <appendedResourcesDirectory>${basedir}/appended-resources</appendedResourcesDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
-
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.6</version>
-                    <configuration>
-                        <reportFormat>brief</reportFormat>
-                        <useFile>false</useFile>
-                        <forkMode>once</forkMode>
-                        <childDelegation>false</childDelegation>
-                        <includes>
-                            <include>**/*Test.java</include>
-                        </includes>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>2.0</version>
-                    <configuration>
-                        <tagBase>
-                            https://svn.apache.org/repos/asf/webservices/wss4j/tags/
-                        </tagBase>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.5</version>
-                    <configuration>
-                        <source>1.5</source>
-                        <target>1.5</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>2.1.2</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>jar</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <attach>true</attach>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.7</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>jar</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <attach>true</attach>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-        
-        <defaultGoal>install</defaultGoal>
     </build>
 
-    <profiles>
-        <profile>
-            <id>release</id>
-            <activation>
-                <property>
-                    <name>release</name>
-                    <value></value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>deploy</id>
-            <activation>
-                <property>
-                    <name>deploy</name>
-                    <value></value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jdk15</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-                <jdk>1.5</jdk>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.bouncycastle</groupId>
-                    <artifactId>bcprov-jdk15</artifactId>
-                    <version>${bcprov.version}</version>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>jdk16</id>
-            <activation>
-                <jdk>1.6</jdk>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.bouncycastle</groupId>
-                    <artifactId>bcprov-jdk16</artifactId>
-                    <version>${bcprov.version}</version>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>fastinstall</id>
-            <properties>
-                <maven.test.skip>true</maven.test.skip>
-                <pmd.skip>true</pmd.skip>
-            </properties>
-        </profile>
-        <profile>
-            <id>nochecks</id>
-            <properties>
-                <pmd.skip>true</pmd.skip>
-            </properties>
-        </profile>
-    </profiles>
-
-    <properties>
-        <xmlsec.version>1.5.2</xmlsec.version>
-        <opensaml.version>2.5.1-1</opensaml.version>
-        <xml.apis.version>1.3.04</xml.apis.version>
-        <bcprov.version>1.46</bcprov.version>
-        <commons.logging.version>1.1.1</commons.logging.version>
-        <xalan.version>2.7.1</xalan.version>
-        <xerces.version>2.9.1</xerces.version>
-        <junit.version>4.8.2</junit.version>
-        <log4j.version>1.2.16</log4j.version>
-        <slf4j.version>1.6.1</slf4j.version>
-
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    
     <dependencies>
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>${commons.logging.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.santuario</groupId>
             <artifactId>xmlsec</artifactId>
-            <version>${xmlsec.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>opensaml</artifactId>
-            <version>${opensaml.version}</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -455,37 +192,31 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>xalan</groupId>
             <artifactId>xalan</artifactId>
-            <version>${xalan.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
-            <version>${xerces.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
-            <version>${xml.apis.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -526,42 +257,4 @@
         </plugins>
     </reporting>
     
-    <distributionManagement>
-        <repository>
-            <id>apache-repo</id>
-            <name>Maven Central Repository</name>
-            <url>
-                scpexe://people.apache.org/www/people.apache.org/repo/m2-ibiblio-rsync-repository
-            </url>
-        </repository>
-        <snapshotRepository>
-            <id>apache.snapshots.https</id>
-            <name>Apache Development Snapshot Repository</name>
-            <url>https://repository.apache.org/content/repositories/snapshots</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-        <site>
-            <id>website</id>
-            <url>
-                scpexe://people.apache.org/www/ws.apache.org/wss4j/
-            </url>
-        </site>
-    </distributionManagement>
-
-    <!-- Temporarily adding in to get Santuario SNAPSHOT
-    <repositories>
-          <repository>
-              <id>apache.snapshots</id>
-              <url>http://repository.apache.org/snapshots/</url>
-              <name>Apache Snapshot Repo</name>
-             <snapshots>
-                 <enabled>true</enabled>
-             </snapshots>
-             <releases>
-                 <enabled>false</enabled>
-             </releases>
-         </repository>
-     </repositories>
-     -->
-
 </project>
